--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -14,7 +14,7 @@
             </div>
 
             <h1 class="display-5">Sign Up</h1>
-            <form action="#" th:action="@{/signup}" method="POST" >
+            <form action="#" th:action="@{/signup}" th:object="${User}" method="POST" >
                 <div  id="success-msg"  th:if="${signupSuccess}" class="alert alert-dark">
                     You successfully signed up! Please continue to the <a>login</a> page.
                 </div>
